# talsh-rs

./: .gitignore  .gitmodules  Cargo.toml
src/: control.rs  lib.rs
talsh-sys/: Cargo.toml  build.rs
talsh-sys/src/: lib.rs
