[package]
name = "talsh"
description = "Tensor Algebra Library for Shared Memory Computers"
version = "0.1.0"
authors = ["Sergio Sanchez Ramirez <sergio.sanchez.ramirez@bsc.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "^0.2"
num-traits = "^0.2"
num-derive = "^0.2"
talsh-sys = { path = "talsh-sys" }